<resources>
    <string name="app_name">Spray</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_welcome">Welcome</string>
    <string name="hello">Hello World, ParseStarterProjectActivity!</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="LoginBtn">Login</string>
    <string name="SignupBtn">Sign Up</string>
    <string name="LogoutBtn">Log Out</string>
    <string name="Welcome">Welcome!</string>
    <string name="title_activity_beacon">BeaconActivity</string>
    <string name="img">img</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="zona">zona</string>
    <string name="alreadyAccount">Already have an account?</string>
    <string name="TakePhoto">Take a photo</string>
    <string name="SelectFromGallery">Select from gallery </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_spray_image">hh</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_tabbed">AA Share with Spary</string>

    <string name="orangeColor">#F59025</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_tab_test_activity">tab_test_activity</string>
    <string name="title_activity_spray_to">SprayToActivity</string>
    <string name="title_activity_choose_recipient">ChooseRecipientActivity</string>
    <string name="title_activity_spray_to_all">SprayToAllActivity</string>
    <string name="title_activity_spray_to_group">SprayToGroupActivity</string>
    <string name="facebook_app_id">SprayToGroupActivity</string>
    <string name="title_activity_hot_spot">HotSpotActivity</string>
    <string name="title_activity_image_preview">ImagePreviewActivity</string>
    <string name="title_activity_drop_box">DropBoxActivity</string>
    <string name="title_activity_drop_box_new">DropBoxNewActivity</string>
    <string name="title_activity_cellular_cell">CellularCellActivity</string>
    <string name="title_activity_wifi">WifiActivity</string>
    <string name="title_activity_blue_tooth">BlueToothActivity</string>
</resources>
